# pdslib-firefox

./: Cargo.toml  mozconfig
dom/ipc/: ContentParent.cpp  ContentParent.h  PContent.ipdl
dom/privateattribution/: Cargo.toml  PrivateAttribution.cpp  PrivateAttribution.h  PrivateAttributionService.sys.mjs  components.conf  moz.build  nsIPrivateAttributionPdslibService.idl  nsIPrivateAttributionService.idl
dom/privateattribution/pdslib/: .gitignore  .rustfmt.toml  Cargo.toml  README.md  justfile  logging_config.yaml
dom/privateattribution/pdslib/.github/workflows/: rust.yml
dom/privateattribution/pdslib/src/: lib.rs
dom/privateattribution/pdslib/src/budget/: hashmap_filter_storage.rs  mod.rs  pure_dp_filter.rs  traits.rs
dom/privateattribution/pdslib/src/events/: hashmap_event_storage.rs  mod.rs  ppa_event.rs  relevant_events.rs  simple_event.rs  traits.rs
dom/privateattribution/pdslib/src/mechanisms/: mod.rs
dom/privateattribution/pdslib/src/pds/: accounting.rs  aliases.rs  core.rs  epoch_pds.rs  mod.rs  private_data_service.rs  quotas.rs  tests.rs
dom/privateattribution/pdslib/src/queries/: histogram.rs  mod.rs  ppa_histogram.rs  simple_last_touch_histogram.rs  traits.rs
dom/privateattribution/pdslib/src/util/: mod.rs  tests.rs
dom/privateattribution/pdslib/tests/: ara_demo.rs  ppa_workflow.rs  simple_events_demo.rs
dom/privateattribution/pdslib/tests/common/: logging.rs
dom/privateattribution/src/: epoch.rs  filter_data.rs  filter_storage.rs  lib.rs  uri.rs
dom/webidl/: PrivateAttribution.webidl
ipc/ipdl/: sync-messages.ini
obj-x86_64-pc-linux-gnu/.mozbuild/: last_log.json
obj-x86_64-pc-windows-msvc/.mozbuild/: last_log.json
