[package]
name = "privateattribution"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
libc = "0.2"
nserror = { path = "../../xpcom/rust/nserror" }
nsstring = { path = "../../xpcom/rust/nsstring" }
xpcom = { path = "../../xpcom/rust/xpcom" }
thin-vec = { version = "0.2.1", features = ["gecko-ffi"] }

log = "0.4"
