[package]
name = "pdslib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pdslib"
crate-type = ["cdylib", "lib"]

[dependencies]
thiserror = "2.0.3"
anyhow = "1.0.93"
log = "0.4"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
log4rs = "1"

[profile.release]
debug = true
